# goldy-exe

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  example.docker-compose.yml  example.env  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: website.yaml
scripts/: add_cname.py  run_dev_server.py
src/: index.html  input.css  script.ts
templates/: footer.html  home.html  post.html
web/: input.css
