[project]
name = "goldy-exe"
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "watchfiles"
]
version = "1"